# landingai-python

./: .flake8  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.notebooks  Dockerfile.wheel  LICENSE.md  Makefile  README.internal.md  README.md  Untitled.ipynb  filename  mkdocs.yml  pyproject.toml  requirements-dev.txt
.devcontainer/: devcontainer.json
.github/workflows/: changelog.yml  ci.yml  ci_cd.yml  docs.yml  stale_prs.yml
_infra/deploy/: ocr-streamlit-docker-build-image.yaml  ocr-streamlit-k8s-deploy.yaml
docs/: _README.md  contributing.md  examples.md  image-operations.md  index.html  index.md  landingai.html  metadata.md  search.js
docs/_overrides/: main.html
docs/api/: common.md  data_management.md  exceptions.md  image_source_ops.md  notebook_utils.md  pipeline.md  postprocess.md  predict.md  st_utils.md  storage.md  telemetry.md  timer.md  transform.md  utils.md  visualize.md
docs/developer_guide/: 1_main.md
docs/image-acquisition/: image-acquisition.md  image-file.md  network-cameras.md  screenshots.md  vide-file.md  video-file.md  webcam.md
docs/inferences/: docker-deployment.md  frames-inference.md  getting-started.md  model-runner.md  ocr.md  overlaying-predictions.md  snowflake-native-app.md
docs/landingai/: common.html  postprocess.html  predict.html  visualize.html
docs/templates/: module.html.jinja2
docs/user_guide/: 1_concepts.md  2_credentials.md  3_postprocess.md  4_pipelines.md  5_data_management.md
examples/: app.py  cosmic-rays.py
examples/apps/crack-measurer/: Camera_Calibration.py  Camera_calibration.py  README.md  app.py  requirements.txt
examples/apps/crack-measurer/pages/: 1_Crack_Measurer.py  1_Upload_image.py  2_Crack_measurer.py
examples/apps/image-folder-support/: README.md  app.py
examples/apps/image-folder-support/pages/: config.py
examples/apps/license-plate-ocr/: README.md  app.py  requirements.txt
examples/apps/model-runner-snowflake-streamlit-demo/: Dockerfile  README.md  app.py  requirements.txt  run-st.sh
examples/apps/object-tracking/: README.md  download_data.py  main.py  object_tracking.py  requirements.txt
examples/apps/object-tracking/pages/: run_inference.py
examples/apps/ocr/: README.md  app.py  predict.py  requirements.txt  roi.py
examples/apps/snowflake-integration/: README.md  app.py  requirements.txt
examples/apps/surfer-count/: README.md  app.py  requirements.txt
examples/apps/surfer-count/pages/: run_inference.py
examples/apps/video-in-snowflake/: config.py
examples/apps/video-in-snowflake/pages/: 1_image_upload.py  2_inference.py
examples/apps/zoom-app/: README.md  Zoom_Demo.ipynb  app.py  requirements.txt  webcam_detect.py
examples/capture-service/: README.md  capture.py  cosmic-rays.py  run.py
examples/edge-models/: README.md  requirements.txt  requirements_win.txt  run_bundle_cls.py  run_bundle_od.py
examples/edge-torch-models/: README.md  inspect_model_bundle.py  requirements.txt  run_inference_qat_model_exported.py
examples/image-folder-support/: app.py  requirements.txt
examples/image-folder-support/pages/: config.py
examples/license-plate-ocr-notebook/: license_plate_ocr.ipynb
examples/post-processings/coral/: coral.ipynb
examples/post-processings/farmland-coverage/: farmland-coverage.ipynb
examples/rtsp-capture/: run.py
examples/rtsp-capture-notebook/: rtsp-capture.ipynb  webcam-capture.ipynb
examples/rtsp-service/: run.py
examples/surfers/: surfer-count.ipynb
examples/video-analytics-notebook/: video-analytics.ipynb
examples/webcam-collab-notebook/: webcam-collab-notebook.ipynb
landingai/: __init__.py  common.py  exceptions.py  image_source_ops.py  io.py  notebook_utils.py  postprocess.py  predict.py  snowflake.py  st_utils.py  telemetry.py  timer.py  transform.py  utils.py  vision_pipeline.py  visualize.py
landingai/data_management/: __init__.py  client.py  dataset.py  export.py  label.py  media.py  metadata.py  utils.py
landingai/data_management/types/: classes.py  label.py  media.py  projects.py
landingai/pipeline/: __init__.py  frameset.py  image_source.py  postprocessing.py
landingai/predict/: __init__.py  cloud.py  edge.py  ocr.py  snowflake.py  utils.py
landingai/storage/: __init__.py  data_access.py  snowflake.py
modules/: landingai.py  pyproject.toml  sample.py
modules/landingai/: interface.py  setup.py
modules/src/landingai/: __init__.py  common.py  interface.py  predict.py  visualize.py
modules/tests/landingai/: test_predict.py
pdocs/developer_guide/: 1_main.md
pdocs/templates/: module.html.jinja2
pdocs/user_guide/: 1_concepts.md  3_postprocess.md  4_pipelines.md  5_data_management.md
rtsp-capture/: rtsp-capture.ipynb
tests/: conftest.py
tests/data/responses/: default_class_model_response.yaml  default_vp_model_response.yaml  test_edge_class_predict.yaml  test_edge_ocr_predict.yaml  test_edge_od_predict.yaml  test_edge_seg_predict.yaml  test_export_event_logs.yaml  test_get_label_map.yaml  test_ocr_predict.yaml  test_read_stream.yaml  test_update_split_key_bulk_update.yaml  test_update_split_key_unassigned.yaml  v1_media_auto_split.yaml  v1_media_list_by_one_status.yaml  v1_media_list_by_three_status.yaml  v1_media_list_filter_by_split.yaml  v1_media_upload_folder.yaml  v1_media_upload_metadata.yaml  v1_media_upload_single_file.yaml  v1_predict_status_300.yaml  v1_predict_status_400.yaml  v1_predict_status_401.yaml  v1_predict_status_403.yaml  v1_predict_status_404.yaml  v1_predict_status_422.yaml  v1_predict_status_429.yaml  v1_predict_status_500.yaml  v1_predict_status_503.yaml  v1_predict_status_504.yaml  v1_set_metadata_multiple_medias.yaml  v1_set_metadata_single_media.yaml
tests/integration/landingai/: test_dataset.py  test_predict.py  test_predict_e2e.py
tests/landingai/: test_common.py  test_io.py  test_postprocess.py  test_predict.py
tests/unit/landingai/: test_common.py  test_image_source_ops.py  test_io.py  test_postprocess.py  test_predict.py  test_telemetry.py  test_timer.py  test_utils.py  test_vision_pipeline.py  test_visualize.py
(+10 files in other folders)
