[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "landingai"
version = "0.0.54"
description = "Helper library for interacting with Landing AI LandingLens"
authors = ["Landing AI <dev@landing.ai>"]
readme = "README.md"
packages = [{include = "landingai"}]

[tool.poetry.urls]
"Homepage" = "https://landing.ai"
"repository" = "https://github.com/landing-ai/landingai-python"
"documentation" = "https://landing-ai.github.io/landingai-python/landingai.html"

[tool.poetry.dependencies]  # main dependency group
python = ">=3.8"

opencv-python = ">=4.5"
numpy = ">=1.21.0"
pillow = ">=9.1.1"
pydantic = { version = "*", extras = ["dotenv"] }
requests = "*"
snowflake-connector-python = "3.0.*"
bbox-visualizer = "^0.1.0"
segmentation-mask-overlay = "^0.3.4"

[tool.poetry.group.dev.dependencies]
autoflake = "*"
pytest = "*"
black = "*"
flake8 = "*"
isort = "*"
pdoc = "*"
responses = "^0.23.1"
mypy = "^1.3.0"
types-requests = "^2.31.0.0"
types-pillow = "^9.5.0.4"
data-science-types = "^0.2.23"
testbook = "^0.4.2"


[tool.poetry.group.examples.dependencies]
jupyterlab = "*"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
exclude = '.vscode|.eggs|venv'
line-length = 88               # suggested by black official site

[tool.isort]
line_length = 88
profile = "black"

[tool.mypy]
exclude = "landingai/tests"
plugins = "pydantic.mypy"
show_error_context = true
pretty = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
strict_equality = true
strict_concatenate = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
disallow_any_unimported = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "cv2.*",
    "segmentation_mask_overlay.*",
    "bbox_visualizer.*",
]