[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "landingai"
version = "0.3.2"
description = "Helper library for interacting with Landing AI LandingLens"
authors = ["Landing AI <dev@landing.ai>"]
readme = "README.md"
packages = [{include = "landingai"}]

[tool.poetry.urls]
"Homepage" = "https://landing.ai"
"repository" = "https://github.com/landing-ai/landingai-python"
"documentation" = "https://landing-ai.github.io/landingai-python/landingai.html"

[tool.poetry.dependencies]  # main dependency group
python = ">=3.8,<4.0"

opencv-python = ">=4.5,<5.0"  # about 87MB (exclude transitive dependencies)
numpy = ">=1.21.0,<2.0.0"
pillow = "9.*" # Version 10.0.0 had a issue on FreeTypeFont that will be fixed on the next release
pydantic = { version = "1.*", extras = ["dotenv"] } # Version 2 has breaking changes (in particular to seetings)
requests = "2.*"
# snowflake-connector-python = "3.0.*"  # about 51MB (exclude transitive dependencies)
bbox-visualizer = "^0.1.0"
segmentation-mask-overlay = "^0.3.4"
imageio = { version = "2.*", extras = ["ffmpeg"] }
aiohttp = { version = ">=3.7.3,<4.0.0", extras = ["speedups"] }
aiofiles = ">=0.7.0,<1.0.0"
tqdm = ">=4.64.0,<5.0.0"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
autoflake = "1.*"
pytest = "7.*"
black = "23.*"
flake8 = "5.*"
isort = "5.*"
pdoc = "14.*"
responses = "^0.23.1"
mypy = "^1.3.0"
types-requests = "^2.31.0.0"
types-pillow = "^9.5.0.4"
data-science-types = "^0.2.23"
testbook = "^0.4.2"
types-aiofiles = "^23.1.0.4"
types-tqdm = "^4.65.0.1"
aioresponses = "^0.7.4"
setuptools = "^68.0.0"
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-material = "^9.4.2"


[tool.poetry.group.examples.dependencies]
jupyterlab = "4.*"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
exclude = '.vscode|.eggs|venv'
line-length = 88               # suggested by black official site

[tool.isort]
line_length = 88
profile = "black"

[tool.mypy]
exclude = "landingai/tests"
plugins = "pydantic.mypy"
show_error_context = true
pretty = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
strict_equality = true
strict_concatenate = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
disallow_any_unimported = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "cv2.*",
    "segmentation_mask_overlay.*",
    "bbox_visualizer.*",
    "streamlit.*",
]